examples/test/testpolicy8332.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8332
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key47: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value30
          key36: value1
          key29: value30
      podSelector:
        matchLabels:
          key9: value7
          key4: value49
          key41: value36
